jspecify, archunit (#43)
* update to spring boot 4 and fix update issues

* add jspecify, nullaway, archunit and fix things

* add utility for nullchecking

* fix nullability issues

* fix query transformer and some other issues

* fixes and archunit

* fix issues